# GDrivePlayerAPI

./: README.md  pyproject.toml
GDrivePlayer/: __init__.py  anime.py  drama.py  exceptions.py  gdriveplayer.py  movie.py  series.py  utils.py
