[tool.poetry]
name = "gdriveplayer"
version = "0.1.0"
description = "A python wrapper for gdriveplayer.co API"
authors = ["adenosinetp10 <adenosinetp10@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "GDrivePlayer"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
