[tool.poetry]
name = "gdriveplayer"
version = "0.2.3"
description = "A python wrapper for gdriveplayer.co API"
authors = ["adenosinetp10 <adenosinetp10@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "GDrivePlayer"}]
homepage = "https://github.com/adenosinetp10/GDrivePlayerAPI"
repository = "https://github.com/adenosinetp10/GDrivePlayerAPI"
keywords = ["poetry", "python", "api", "wrapper", "gdrive", "gdriveplayer"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
